# DXDeferredRenderer

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  remake.bat  run.bat
graphite/: main.cpp
graphite/core/: engine.cpp  engine.h
graphite/gfx/: dx11_render_backend.cpp  dx11_render_backend.h  render_backend.h  render_backend_factory.cpp
graphite/gfx/backend/: render_backend.h
graphite/gfx/backend/dx11/: dx11.cpp  dx11.h
graphite/gfx/backend/dx11/helpers/: dx11_buffer_manager.cpp  dx11_buffer_manager.h  dx11_gbuffer.cpp  dx11_gbuffer.h  dx11_texture_manager.cpp  dx11_texture_manager.h
graphite/gfx/common/: buffer_desc.h  handle_allocator.cpp  handle_allocator.h  texture_desc.h
graphite/gfx/factory/: render_backend_factory.cpp  render_backend_factory.h
graphite/platform/win32/: window.cpp  window.h
graphite/utils/: debug.h  timer.cpp  timer.h
